# finwatch-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: DEVLOG.md
scripts/: seed_data.py
src/agent/: cli.py  graph.py  nodes.py  state.py
src/mcp_server/: config.py  server.py
src/mcp_server/tools/: anomaly.py  compliance.py  filings.py  market_kpi.py  portfolio.py  risk.py
src/rag/: retriever.py
tests/: test_tools.py
